added link parhomalex

--- a/main/index.html
+++ b/main/index.html
@@ -33,6 +33,7 @@
                 <div class="links"></div>
             </div>
         </main>
+        <a href="#">Parhomalex</a>
 
         <footer>
             <p>You're doing great! Learning programming can be challenging, but you're showing true enthusiasm and
